<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="@string/item_name_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/itemExpirationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemName"
            android:padding="8dp"
            android:text="@string/item_expiration_date_placeholder" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemExpirationDate"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/increaseAmountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase_amount_btn" />

            <TextView
                android:id="@+id/itemAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/item_amount_placeholder" />

            <Button
                android:id="@+id/decreaseAmountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease_amount_btn" />
        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>