<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/item_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextItemAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/editTextItemName" />

        <EditText
            android:id="@+id/editTextExpirationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expiry_date_yyyy_mm_dd"
            app:layout_constraintTop_toBottomOf="@id/editTextItemAmount" />

        <Button
            android:id="@+id/buttonSaveItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/editTextExpirationDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
